<resources>
    <string name="app_name">InstaCopy</string>
    <string name="error_tap_to_retry">Error Occurred. Are you connected to Internet. \nTap to Retry!</string>
    <string name="main_image_is_shown">Main Image is shown</string>
    <string name="like_image">Like icon</string>
    <string name="bookmark_image">Bookmark icon</string>
    <string name="chat_image">chat icon</string>
    <string name="share_icon">Share icon</string>


    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>
</resources>
